删除 dist